# finance-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  code-simplifier.md
.claude/hooks/: security_reminder_hook.py
scripts/: migrate_sqlite_to_duckdb.py
src/finance_agent/: __init__.py  api_base.py  backfill.py  collector.py  config.py  constants.py  database.py  fees.py  hooks.py  kalshi_client.py  kb_versioning.py  logging_config.py  main.py  meta_backfill.py  models.py  permissions.py  polymarket_client.py  rate_limiter.py  server.py  server_main.py  signals.py  tools.py  ws_monitor.py
src/finance_agent/migrations/: env.py  script.py.mako
src/finance_agent/migrations/versions/: 0001_initial.py  0001_initial_schema.py  0002_add_recommendations_table.py  0002_execution_engine.py  0003_drop_sessions_profile.py  0003_remove_signals.py  0006_simplify_sessions.py  0007_duckdb_initial.py  0008_session_logs.py  0009_sdk_session_id.py
src/finance_agent/migrations/versions/_sqlite_archive/: 0002_kalshi_daily.py  0003_kalshi_market_meta.py  0004_add_strategy_to_groups.py  0005_settlement_pnl.py
src/finance_agent/prompts/: system.md
src/finance_agent/tui/: __init__.py  __main__.py  agent.tcss  app.py  messages.py  services.py
src/finance_agent/tui/screens/: dashboard.py  history.py  knowledge_base.py  performance.py  portfolio.py  recommendations.py  signals.py
src/finance_agent/tui/widgets/: agent_chat.py  ask_modal.py  confirm_modal.py  kb_panel.py  orders_table.py  portfolio_panel.py  rec_card.py  rec_list.py  status_bar.py
tests/: conftest.py  helpers.py  test_api_base.py  test_collector.py  test_config.py  test_database.py  test_fees.py  test_hooks.py  test_kalshi_client.py  test_kalshi_live.py  test_main.py  test_polymarket_client.py  test_rate_limiter.py  test_signals.py  test_tools.py  test_workspace_scripts.py
tests/tui/: conftest.py  test_messages.py  test_services.py  test_widgets.py
workspace/.claude/skills/_archived/binary-option-pricing/: SKILL.md
workspace/.claude/skills/_archived/binary-option-pricing/scripts/: pricing.py
workspace/.claude/skills/_archived/market-microstructure/: SKILL.md
workspace/.claude/skills/_archived/market-microstructure/scripts/: liquidity.py
workspace/.claude/skills/_archived/monte-carlo-simulation/scripts/: simulate.py
workspace/.claude/skills/_archived/probability-calibration/scripts/: calibrate.py
workspace/.claude/skills/_archived/sports-predicting/scripts/: elo_ratings.py
workspace/.claude/skills/_archived/statistical-classifying/: SKILL.md
workspace/.claude/skills/_archived/time-series-forecasting/scripts/: arima_forecast.py  garch_volatility.py
workspace/.claude/skills/bayesian-updating/: SKILL.md
workspace/.claude/skills/binary-option-pricing/scripts/: pricing.py
workspace/.claude/skills/kelly-sizing/: SKILL.md
workspace/.claude/skills/kelly-sizing/scripts/: kelly.py
workspace/.claude/skills/market-microstructure/scripts/: liquidity.py
workspace/.claude/skills/ml-ensemble-modeling/: SKILL.md
workspace/.claude/skills/ml-ensemble-modeling/scripts/: train_ensemble.py
workspace/.claude/skills/monte-carlo-simulation/: SKILL.md
workspace/.claude/skills/monte-carlo-simulation/scripts/: simulate.py
workspace/.claude/skills/probability-calibration/: SKILL.md
workspace/.claude/skills/probability-calibration/scripts/: calibrate.py
workspace/.claude/skills/risk-managing/: SKILL.md
workspace/.claude/skills/risk-managing/scripts/: portfolio_risk.py
workspace/.claude/skills/sports-predicting/: SKILL.md
workspace/.claude/skills/sports-predicting/scripts/: elo_ratings.py
workspace/.claude/skills/statistical-classifying/scripts/: logistic_model.py
workspace/.claude/skills/time-series-forecasting/: SKILL.md
workspace/.claude/skills/time-series-forecasting/scripts/: arima_forecast.py  garch_volatility.py
workspace/analysis/: knowledge_base.md
workspace/lib/: kelly_size.py  match_markets.py  normalize_prices.py
workspace/scripts/: category_overview.py  correlations.py  db_utils.py  market_info.py  query_history.py  query_recommendations.py  scan_brackets.py  schema_reference.md
