[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent"
version = "0.1.0"
description = "AI-powered Kalshi prediction market investment agent"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.33",
    "kalshi-python>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "arch>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]
extend-exclude = ["workspace"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["finance_agent"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
