[build-system]
requires = ["setuptools>=81.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent"
version = "0.1.0"
description = "Cross-platform prediction market arbitrage agent"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.33",
    "kalshi-python>=2.1.4",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "numpy>=2.4",
    "scipy>=1.17",
    "polymarket-us>=0.1.0",
    "alembic>=1.16",
    "sqlalchemy>=2.0",
    "textual>=2.1",
]

[project.optional-dependencies]
# Scientific computing for workspace skill scripts (agent-authored analysis)
skills = [
    "pandas>=3.0",
    "matplotlib>=3.10",
    "scikit-learn>=1.8",
]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.5",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]
extend-exclude = ["workspace"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length (formatter handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["finance_agent"]

# ---------- pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
