[build-system]
requires = ["setuptools>=81.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent"
version = "0.1.0"
description = "Cross-platform prediction market arbitrage agent"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.33",
    "kalshi-python-async>=3.6.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "numpy>=2.4",
    "scipy>=1.17",
    "polymarket-us>=0.1.0",
    "alembic>=1.16",
    "sqlalchemy>=2.0",
    "textual>=2.1",
    "websockets>=14.0",
    "cryptography>=44.0",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=6.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
finance_agent = ["**/*.tcss", "**/*.md"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src"]
extend-exclude = ["workspace"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "T20",  # flake8-print (no stray prints)
    "C4",   # flake8-comprehensions
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "A",    # flake8-builtins (no shadowed builtins)
    "PIE",  # flake8-pie (misc unnecessary code)
    "DTZ",  # flake8-datetimez (timezone-aware datetimes)
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint (performance anti-patterns)
    "FURB", # refurb (modern Python idioms)
    "S",    # flake8-bandit (security)
    "NPY",  # numpy-specific rules
    "TD",   # flake8-todo (TODO hygiene)
]
ignore = [
    "E501",    # line length (formatter handles)
    "ISC001",  # single-line implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["finance_agent"]

# ---------- pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["finance_agent"]
omit = [
    "src/finance_agent/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# ---------- mypy ----------
[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20260107",
]
